Removed graphql-java dependency