@@ -23,7 +23,6 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0-rc1'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.13.0-rc1'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0-rc1'
-    implementation 'com.graphql-java:graphql-java:16.2'
 
     implementation 'com.jfoenix:jfoenix:9.0.10'
     implementation 'org.controlsfx:controlsfx:11.1.0'
@@ -37,4 +36,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+run {
+    //jvmArgs << "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
 }
